# Template

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yaml  copier.yml  data.dvc  main.py  playground.ipynb  playground.py  pyproject.toml  requirements.txt  setup.py  tasks.py  train.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: code_formatting.yaml  tests.yaml
bashfiles/: template.sh
configs/: config.yaml
configs/callbacks/: batchespersecond.yaml  batchsizefinder.yaml  dummy_callbacks.yaml  earlystopping.yaml  ema.yaml  example.yaml  log_graph.yaml  loggrad.yaml  logloss.yaml  modelcheckpoint.yaml  params.yaml  richmodelsummary.yaml  richprogressbar.yaml  stop_training.yaml  swa.yaml  timer.yaml  wandb_watch.yaml
configs/data/: dummy_data.yaml
configs/experiment/: dummy.yaml  example.yaml  template.yaml
configs/logger/: default.yaml
configs/losses/: l1.yaml  mse.yaml  snr.yaml
configs/lr_scheduler/: constant.yaml
configs/model/: dummy_model.yaml  example.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: cpu.yaml  gpu.yaml  multi_gpu.yaml
latex/: clearml.ipynb  zotero.py
src/: __init__.py  utils.py
src/callbacks/: __init__.py  ema_callback.py  log_loss_callback.py  utils.py  vae_callbacks.py
src/data_modules/: __init__.py  base_dm.py
src/dataset/: __init__.py  audio.py  basedataset.py  celeba.py  emnist.py  mnist.py  utils.py
src/datasets/: basedataset.py  dummy.py
src/lightning_modules/: __init__.py  baselightningmodule.py  dummy.py  example.py  utils.py
src/losses/: __init__.py  baseloss.py  mse.py
src/module_name/: __init__.py  utils.py
src/module_name/callbacks/: batches_per_second.py  ema_callback.py  log_gradients.py  log_graph.py  log_loss_callback.py  metrics_callback.py  parametercount.py  stop_training.py  wandb_watch.py
src/module_name/data_modules/: base_dm.py
src/module_name/datasets/: basedataset.py  dummy.py
src/module_name/lightning_modules/: baselightningmodule.py  dummy.py
src/module_name/losses/: baseloss.py  l1.py  mse.py  snr.py  weighted_loss.py
src/module_name/networks/: pretrained.py
src/module_name/tests/: test_callbacks.py  test_data_modules.py  test_datasets.py  test_imports.py  test_lightning_modules.py  test_losses.py  test_main.py  test_networks.py  test_utils.py
src/networks/: __init__.py  dummy.py  mlps.py  pretrained.py  unets.py
src/tests/: test_data_modules.py  test_datasets.py  test_losses.py  test_main.py
src/{{module_name}}/: __init__.py  utils.py
src/{{module_name}}/callbacks/: ema_callback.py  log_graph.py  stop_training.py
src/{{module_name}}/datasets/: basedataset.py  dummy.py
src/{{module_name}}/lightning_modules/: baselightningmodule.py  dummy.py
src/{{module_name}}/losses/: __init__.py  (+3 more)
src/{{project_name}}/: __init__.py  __main__.py  utils.py
{{'.github'}}/workflows/: code_formatting.yaml  tests.yaml
(+37 files in other folders)
