[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "dvc-gdrive>=3.0.1",
    "hydra-core==1.3.2",
    "invoke>=2.2.1",
    "matplotlib==3.10.8",
    "mnist==0.2.2",
    "numpy==2.4.0",
    "omegaconf==2.3.0",
    "pytorch-lightning==2.6.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "torch==2.9.1",
    "torch-ema==0.3",
    "wandb==0.23.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

