[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "module_name"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pytorch-lightning",
    "wandb",
    "invoke",
    "dotenv",
    "pytest",
    "pre-commit",
    "matplotlib",
    "omegaconf",
    "hydra-core",
    "torch-ema>=0.3",
    "torchview>=0.2.7",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
